tests/dataset/tpc-ds/compiler/kotlin/q45.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q45.kt:78:46: error: unresolved reference: substr
                                        if ((substr(ca.ca_zip, 0, 5) in zip_list || i.i_item_id in item_ids) && d.d_qoy == qoy && d.d_year == year) {
                                             ^
